# cppBeginnerProjects

./: CMakeLists.txt  MainFile.cpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
src/: AC.h  Averages Calc.cpp  CC.h  CVC.h  Character Classes.cpp  Circle Volume Calculator.cpp  FM.h  File Management.cpp  Include.h  MainFile.cpp
